[gd_scene load_steps=6 format=3 uid="uid://b4yumrb4c0xyd"]

[ext_resource type="Texture2D" uid="uid://ccuxh3qifp7sw" path="res://Assets/Items/rocket.png" id="1_24a6o"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="1_fola4"]
[ext_resource type="Script" path="res://Scenes/card.gd" id="1_vr3r8"]
[ext_resource type="FontFile" uid="uid://cg1v3rwo18jwh" path="res://Fonts/Play-Bold.ttf" id="3_d5d7j"]
[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="5_lvjg3"]

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(180, 180)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -97.0
offset_right = 92.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_vr3r8")

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_fola4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="CardName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d5d7j")
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardIcon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_24a6o")
stretch_mode = 3

[node name="CardDesc" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_d5d7j")
text = "afwfa fw aw faw faw f fwa aw faw faw faw fwa fwa fw a f"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardCost" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d5d7j")
text = "1"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("5_lvjg3")

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[connection signal="pressed" from="Button" to="." method="OnButtonPressed"]
